correct word spell

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Default Value: ``</p>
 
 <ul>
 <li>Only support <code>GET</code> request</li>
-<li>Not support <code>WeSocket</code> yet</li>
+<li>Not support <code>WebSocket</code> yet</li>
 <li>Not testing enough</li>
 </ul><h2>
 <a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h2>
